0032812: Coding - problem after integration 32806